# ffmpegDemo

./: README.md
ffmpegDemo/app/: CMakeLists.txt  build.gradle
ffmpegDemo/app/src/androidTest/java/com/example/ffmpegdemo/: ExampleInstrumentedTest.java
ffmpegDemo/app/src/main/: AndroidManifest.xml
ffmpegDemo/app/src/main/cpp/: Utils.c  native-lib.cpp
ffmpegDemo/app/src/main/cpp/libavformat/: avformat.h
ffmpegDemo/app/src/main/java/com/example/ffmpegdemo/: MainActivity.java  Student.java
ffmpegDemo/app/src/main/res/layout/: activity_main.xml
ffmpegDemo/gradle/wrapper/: gradle-wrapper.properties
